manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: php-tools
  labels:
    app.kubernetes.io/managed-by: argocd
    environment: production
