manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-tools
  namespace: php-tools
  labels:
    app.kubernetes.io/name: php-tools
    app.kubernetes.io/instance: php-tools
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: php-tools
  ports:
    - name: http
      port: 80s
      protocol: TCP
      targetPort: 8080
